Added logic for generating and verifying api keys
